--- a/priv/ansible/roles/nginx/templates/nginx_app.conf.j2
+++ b/priv/ansible/roles/nginx/templates/nginx_app.conf.j2
@@ -6,11 +6,13 @@ server {
   gzip on;
   listen 80;
 
-  gzip_types text/plain text/html text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript application/json;                                                                      
+  gzip_types text/plain application/json;
   server_name {{ app_server_name }};
   root {{ app_path }}/current/public;
 
   location / {
+    client_max_body_size {{ nginx_max_size }};
+    proxy_read_timeout {{ nginx_read_timeout }};
     proxy_pass http://{{ app_name }}; # match the name of upstream directive which is defined above
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
