--- a/priv/ansible/roles/nginx/templates/nginx_app.conf.j2
+++ b/priv/ansible/roles/nginx/templates/nginx_app.conf.j2
@@ -18,7 +18,7 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }  
 
-  location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+  location ~* \.(js|css|png|jpg|jpeg|gif|ico|xml)$ {
     expires 1y;
     log_not_found off;
   }
