--- a/priv/ansible/roles/erly/templates/tb.conf.j2
+++ b/priv/ansible/roles/erly/templates/tb.conf.j2
@@ -16,18 +16,18 @@
             {
                 1,
                 [
-                    {"", 0, {layout_element,0,100,100,1,"",<<"">>,0}},
-                    {"0", 4, {layout_element,4,100,30,1,"0",<<"video">>,1}},
-                    {"1", 0, {layout_element,0,100,70,0,"1",<<"">>,0}},
-                    {"10", 1, {layout_element,1,70,100,0,"10",<<"docs">>,1}},
-                    {"11", 3, {layout_element,3,30,100,0,"11",<<"chat">>,1}}
+                    {"", 0, {layout_element,0,100,100,0,"",<<"">>,0}},
+                    {"0", 4, {layout_element,4,70,100,0,"0",<<"video">>,1}},
+                    {"1", 0, {layout_element,0,30,100,1,"1",<<"">>,0}},
+                    {"10", 2, {layout_element,2,100,50,1,"10",<<"users">>,1}},
+                    {"11", 3, {layout_element,3,100,50,1,"11",<<"chat">>,1}}
                 ]
             },
             {
                 2,
                 [
                     {"", 0, {layout_element,0,100,100,0,"",<<"">>,0}},
-                    {"0", 4, {layout_element,4,70,100,0,"0",<<"video">>,1}},
+                    {"0", 5, {layout_element,5,70,100,0,"0",<<"screenshare">>,1}},
                     {"1", 0, {layout_element,0,30,100,1,"1",<<"">>,0}},
                     {"10", 2, {layout_element,2,100,50,1,"10",<<"users">>,1}},
                     {"11", 3, {layout_element,3,100,50,1,"11",<<"chat">>,1}}
