--- a/priv/ansible/roles/erly/templates/tb.conf.j2
+++ b/priv/ansible/roles/erly/templates/tb.conf.j2
@@ -36,22 +36,22 @@
         ]
     }.
     {
-        http_file_upload_path, "{{teachbase_file_upload_path}}"
+        http_file_upload_path, "{{ teachbase_file_upload_path }}"
     }.
     {
-        http_file_poll_path, "{{teachbase_file_poll_path}}"
+        http_file_poll_path, "{{ teachbase_file_poll_path }}"
     }.
     {
-        recording_dir, "{{teachbase_recording_dir}}"
+        recording_dir, "{{ teachbase_recording_dir }}"
     }.
     {
-        api_key, <<"{{teachbase_api_key}}">>
+        api_key, <<"{{ teachbase_api_key }}">>
     }.
-    {aws_dir,"recordings"}.
-    {aws_bucket, "devtbupload"}.
+    {aws_dir,"{{ teachbase_aws_dir }}"}.
+    {aws_bucket, "{{ teachbase_aws_bucket }}"}.
     {
         user_waiting_time, 30000
     }.
     {
-        debug_mode, false
+        debug_mode, {{ teachbase_debug_mode }}
     }.
