--- a/priv/ansible/templates/nginx.conf.j2
+++ b/priv/ansible/templates/nginx.conf.j2
@@ -4,7 +4,7 @@ upstream {{ app_name }} {
 
 server {
   gzip on;
-  listen 80;
+  listen {{ nginx_listen_port }};
 
   gzip_types text/plain application/json;
   server_name {{ app_server_name }};
