--- a/priv/ansible/roles/erly/templates/app.config.j2
+++ b/priv/ansible/roles/erly/templates/app.config.j2
@@ -50,7 +50,7 @@
     {error_logger_redirect, true}
   ]},
   {erl_api_client, [
-    {http_host, <<"{{ teachbase_http_host }}">>},
+    {http_host, <<"{{ teachbase_local_http_host }}">>},
     {http_ssl, false},
     {http_auth_token, "{{ teachbase_auth_token }}"},
     {http_info_path, <<"/meetings/info">>},
