--- a/priv/ansible/roles/tb_prepare/templates/database.yml.j2
+++ b/priv/ansible/roles/tb_prepare/templates/database.yml.j2
@@ -2,7 +2,7 @@ production:
   adapter: postgresql
   host: {{ postgresql_host }}
   database: {{ postgresql_databases }}
-  username: {{ postgresql_user }}
-  password: {{ postgresql_user_pass }} 
+  username: {{ postgresql_db_user }}
+  password: {{ postgresql_db_user_pass }} 
   encoding: unicode
   pool: 10
