--- a/priv/ansible/roles/erly/templates/app.config.j2
+++ b/priv/ansible/roles/erly/templates/app.config.j2
@@ -6,13 +6,28 @@
   ]},
   {lager, [
     {handlers, [
-      {lager_console_backend, debug},
-      {lager_file_backend, [{file, "log/debug.log"}, {level, debug}, {size, 2097152}, {date, "$D0"}, {count, 10}]},
-      {lager_file_backend, [{file, "log/error.log"}, {level, error}, {size, 10485760}, {date, "$D0"}, {count, 5}]},
-      {lager_file_backend, [{file, "log/info.log"}, {level, info}, {size, 10485760}, {date, "$D0"}, {count, 5}]},
-      {lager_file_backend, [{file, "log/warning.log"}, {level, warning}, {size, 10485760}, {date, "$D0"}, {count, 5}]}
+      {lager_console_backend, debug}
+      ,{
+        lager_file_backend,
+        [{file, "log/debug.log"}, {level, debug}, {size, 2097152}, {date, "$D0"}, {count, 10}]
+      }
+      ,{
+        lager_file_backend,
+        [{file, "log/error.log"}, {level, error}, {size, 10485760}, {date, "$D0"}, {count, 5}]
+      }
+      ,{
+        lager_file_backend,
+        [{file, "log/info.log"}, {level, info}, {size, 10485760}, {date, "$D0"}, {count, 5}]
+      }
+      ,{
+        lager_file_backend,
+        [{file, "log/warning.log"}, {level, warning}, {size, 10485760}, {date, "$D0"}, {count, 5}]
+      }
       {% if honeybadger_api_key is defined %}
-      ,{lager_honeybadger_backend, [{api_key, "{{ honeybadger_api_key }}"}]}
+      ,{
+        lager_honeybadger_backend,
+        [{api_key, "{{ honeybadger_api_key }}"}]
+      }
       {% endif %}
     ]},
     {extra_sinks,
