--- a/priv/ansible/roles/erly/templates/erlyd.j2
+++ b/priv/ansible/roles/erly/templates/erlyd.j2
@@ -25,7 +25,7 @@ case "$1" in
         $0 start
         ;;
     *)
-        echo "Usage: /etc/init.d/erly {ping|start|stop|restart}"
+        echo "Usage: /etc/init.d/erlyd {ping|start|stop|restart}"
         exit 1
         ;;
 esac
