--- a/priv/ansible/roles/erly/templates/reltool.config.j2
+++ b/priv/ansible/roles/erly/templates/reltool.config.j2
@@ -1,6 +1,6 @@
 {sys, [
-       {lib_dirs, ["apps","deps"]},
-       {rel, "erlyvideo", "1",
+       {lib_dirs, ["apps", "deps"]},
+       {rel, "erly", "1",
         [
          kernel,
          stdlib,
@@ -18,9 +18,9 @@
          kernel,
          stdlib
         ]},
-       {boot_rel, "erlyvideo"},
+       {boot_rel, "erly"},
        {profile, embedded},
-       {mod_cond,all},
+       {mod_cond, all},
        {excl_archive_filters, [".*"]}, % do no archive built libs
        {excl_sys_filters, ["^bin/.*",
                            "^erts.*/bin/(dialyzer|typer)"]},
@@ -38,12 +38,9 @@
 {overlay, [
            {copy, "files/erl", "\{\{erts_vsn\}\}/bin/erl"},
            {copy, "files/nodetool", "\{\{erts_vsn\}\}/bin/nodetool"},
-           {copy, "files/erlyvideo", "bin/erlyvideo"},
+           {copy, "files/erly", "bin/erly"},
            {copy, "files/app.config", "etc/app.config"},
            {copy, "files/vm.args", "etc/vm.args"},
-           {copy, "priv/erlyvideo.conf", "etc/erlyvideo.conf"},
-           {copy, "contrib/reverse_mpegts", "bin/reverse_mpegts"},
-           {copy, "contrib/rtmp_bench", "bin/rtmp_bench"},
-           {copy, "contrib/rtmp_proxy", "bin/rtmp_proxy"},
-           {copy, "contrib/rtsp_test_client", "bin/rtsp_test_client"}
+           {copy, "files/install_upgrade.escript", "bin/install_upgrade.escript"},
+           {copy, "priv/erlyvideo.conf", "etc/erlyvideo.conf"}
            ]}.
