--- a/priv/ansible/roles/erly/templates/app.config.j2
+++ b/priv/ansible/roles/erly/templates/app.config.j2
@@ -72,6 +72,8 @@
     {http_auth_path, <<"/auths/check">>},
     {http_token_path, <<"/auths/create">>},
     {http_recording_path, <<"/recordings">>},
-    {http_stats_path, <<"/meetings/stats">>}
+    {http_stats_path, <<"/meetings/stats">>},
+    {http_dpo_auth_path, <<"/translations/check">>},
+    {http_dpo_recording_path, <<"/translations/:id/recording">>}
   ]}
 ].
