--- a/priv/ansible/roles/erly/templates/reltool.config.j2
+++ b/priv/ansible/roles/erly/templates/reltool.config.j2
@@ -11,7 +11,8 @@
          lager_honeybadger_backend,
          lager_logstash_backend,
          erlyvideo,
-         teachbase
+         teachbase,
+         dpo
         ]},
        {rel, "start_clean", "",
         [
