Upd vagrant configuration; add varnish_host

--- a/priv/ansible/roles/tb_prepare/templates/secrets.yml.j2
+++ b/priv/ansible/roles/tb_prepare/templates/secrets.yml.j2
@@ -7,6 +7,7 @@ production:
   erly:
     host: {{ erly.host }}
     api_key: {{ erly.api_key }}
+    varnish_host: {{ erly.varnish_host }}
   fyler:
     host: {{ fyler_host }}
     login: {{fyler_login }}
