Add dpo handler to erly

--- a/priv/ansible/roles/erly/templates/erlyvideo.conf.j2
+++ b/priv/ansible/roles/erly/templates/erlyvideo.conf.j2
@@ -6,7 +6,7 @@
     {file_access, file},
   	{detectors, [rewrite, http, file, livestream]},
     {hostname, ["localhost"]},
-    {rtmp_handlers, [auth_users_limit, tb_rtmp_share_handler, tb_rtmp_handler, apps_streaming, apps_recording, notfound_rtmp_handler]},
+    {rtmp_handlers, [auth_users_limit, tb_rtmp_share_handler, tb_rtmp_handler, dpo_rtmp_handler, apps_streaming, apps_recording, notfound_rtmp_handler]},
     {file_dir, "/"}
   ]}
 ]}.
