--- a/priv/ansible/roles/erly/templates/reltool.config.j2
+++ b/priv/ansible/roles/erly/templates/reltool.config.j2
@@ -12,6 +12,7 @@
          lager_logstash_backend,
          erlyvideo,
          teachbase,
+         tb_checker,
          dpo
         ]},
        {rel, "start_clean", "",
